# pharmaGuard

./: .env.example  .gitignore  README.en.md  README.tr.md
backend/: pyproject.toml
backend/app/: chain.py  config.py  detector.py  graph_store.py  listener.py  main.py  ws.py
backend/app/abi/: PharmaGuard.json
backend/tests/: test_api.py  test_chain.py  test_detector.py  test_graph_store.py  test_listener.py
contracts/: foundry.toml
contracts/script/: Deploy.s.sol  SeedRoles.s.sol
contracts/src/: PharmaGuard.sol
contracts/test/: PharmaGuard.t.sol
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AIMonitor.tsx  ConsoleHeader.tsx  DemoControls.tsx  TurkeyMap.tsx
frontend/lib/: api.ts  useGraph.ts
scripts/: fund-demo-accounts.sh
worker/: package-lock.json  package.json  wrangler.jsonc
worker/src/: abi.ts  detector.ts  index.ts
