[project]
name = "pharmaguard-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "web3>=6.15",
  "eth-account>=0.11",
  "networkx>=3.2",
  "python-dotenv>=1.0",
  "pydantic-settings>=2.2",
]

[project.optional-dependencies]
gnn = ["torch", "torch-geometric"]   # CPU-only; GNN representation seam, not the live path
dev = ["pytest>=8", "pytest-asyncio>=0.23", "httpx>=0.27"]
